fix the invisible warning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,6 @@ div.option > button {
 
 div.option > p#warningText {
  max-width: 100%;
- visibility: hidden;
 }
 
 input[type=number] {
